# FewShotTextGCN

./: .gitignore  README.md  data-converter.ipynb  dataloader.py  dataloader_transformers.py  dev-requirements.txt  environment.yml  main.py  models.py  models_transformers.py  parameters.ini  parser_utils.py  preprocess_data.py  pyproject.toml  regeneration.sh  requirements.txt  run_bbpe.sh  run_bbpe_grid.sh  run_gcn_baselines.sh  run_mbert.sh  run_reuters.sh  run_self_training.sh  run_self_training_unsup.sh  run_textgcn_II.sh  run_unsup.sh  run_xlmr.sh
BBPE/: bbpe_tokenizer.py  byteVocab.txt  text_to_utf8.py
data/: unsup_dummy_data_test.tsv  unsup_dummy_data_train.tsv
experiment_params/: bbpe.ini  gcn_full.ini  graphsage_literature_sup.ini  graphsage_literature_unsup.ini  mbert.ini  self_training.ini  self_training_unsup.ini  simple_textgcn.ini  textgcnII.ini  textgcn_original.ini  unsup.ini  unsup_grid_search.ini  xlmr.ini
notebooks/: Untitled.ipynb
optimizers/: ranger21.py
